<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/prowadzacyListItem_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tytul"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/prowadzacyNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prowadzacyListItem_title">

        <TextView
            android:id="@+id/prowadzacyListItem_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/imie"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/prowadzacyListItem_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:text="@string/nazwisko"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/prowadzacyTelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prowadzacyNameLayout">
    <TextView
        android:id="@+id/prowadzacyListItem_nrtel_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/nr_telefonu"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/prowadzacyListItem_nrtel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="123123123"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/prowadzacyListItem_nrtel"
        app:layout_constraintTop_toTopOf="@id/prowadzacyListItem_nrtel" />
    </LinearLayout>

    <TextView
        android:id="@+id/prowadzacyListItem_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prowadzacyTelLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.2" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/prowadzacyListItem_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/baseline_person_24"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@+id/prowadzacyListItem_title" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#C2C2C2"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/prowadzacyListItem_email" />


</androidx.constraintlayout.widget.ConstraintLayout>