<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/whiteMessageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="start"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewSenderWhite"
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/black"
            android:background="@drawable/circle_image"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/zdjecie"
            android:src="@drawable/baseline_person_24" />

        <LinearLayout
            android:id="@+id/whiteMessageBubble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/default_bubble"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/textViewSenderWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nadawca"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewMessageWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tekst"
                android:textSize="16sp"
                android:maxEms="15"/>

            <TextView
                android:id="@+id/textViewTimestampWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/czas"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/blueMessageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/blueBubbleLayout"
            android:maxWidth="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/light_blue_bubble"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="8dp">


            <TextView
                android:id="@+id/textViewSender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nadawca"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tekst"
                android:textSize="16sp"
                android:maxEms="15" />

            <TextView
                android:id="@+id/textViewTimestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/czas"
                android:textSize="12sp" />

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewSenderBlue"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/circle_image"
            android:layout_gravity="center_vertical"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/black"
            android:contentDescription="@string/zdjecie"
            android:src="@drawable/baseline_person_24" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
