<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfilProwadzacyActivity">

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/darkgrey">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center_horizontal|center_vertical"
            android:singleLine="true"
            android:text="Twój profil"
            android:textColor="@color/white"
            android:textSize="28sp" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/prowadzacyInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleLayout"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/prowadzacyTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/tytul"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/prowadzacyNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/prowadzacyNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imie"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prowadzacySurnameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/nazwisko"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/prowadzacyImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_person_24" />



        <LinearLayout
            android:id="@+id/prowadzacyEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prowadzacyImageView">

            <TextView
                android:id="@+id/prowadzacyTextViewEmail_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/email"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/studentEmailLayout"
                android:hint="jan.kowalski@pw.edu.pl"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textCursorDrawable="@null"
                app:backgroundTint="@color/lightgrey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/studentTelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/studentEmailTextView">

            <TextView
                android:id="@+id/studentTextViewNrTel_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/nr_telefonu"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent" />
            <!-- EditText for Nr Tel -->
            <EditText
                android:id="@+id/editTextNrTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/studentTelLayout"
                android:hint="123456789"
                android:inputType="phone"
                android:padding="8dp"
                android:textCursorDrawable="@null"
                app:backgroundTint="@color/lightgrey" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/blue"
            android:padding="8dp"
            android:text="Anuluj"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/blue"
            android:padding="8dp"
            android:text="Zapisz"
            android:textSize="20sp" />
    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/darkergrey"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>