<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilStudentActivity">

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/darkgrey">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center_horizontal|center_vertical"
            android:singleLine="true"
            android:text="Twój profil"
            android:textColor="@color/white"
            android:textSize="28sp" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/studentInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleLayout"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/studentNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/studentNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/imie" />

            <TextView
                android:id="@+id/studentSurnameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:paddingStart="10dp"
                android:textStyle="bold"
                android:text="@string/nazwisko" />
        </LinearLayout>

        <ImageView
            android:id="@+id/studentImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/baseline_person_24"
        android:scaleType="centerCrop"
            android:layout_marginBottom="10dp"/>


    <LinearLayout
        android:id="@+id/studentIndexLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentNameLayout">

        <TextView
            android:id="@+id/studentTextViewIndex_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/nr_ind"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/studentIndexTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:text="@string/nr_ind"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/studentEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentIndexLayout">

        <TextView
            android:id="@+id/studentTextViewEmail_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/email"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/studentEmailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/studentTelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentEmailTextView">

        <TextView
            android:id="@+id/studentTextViewNrTel_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/nr_telefonu"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/studentNrTelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:text="@string/nr_telefonu"
            android:textSize="16sp" />
    </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wyloguj się  "
        android:backgroundTint="@color/red"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/bottom_navigation"
        android:layout_marginBottom="30dp"
        android:drawableRight="@drawable/baseline_logout_24" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="     Edytuj      "
        android:backgroundTint="@color/blue"
        android:textSize="20sp"
        android:layout_above="@+id/logoutButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:drawableRight="@drawable/baseline_edit_24"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/darkergrey"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>